# hackthon_0_

./: .gitignore  README.md
silver_tier_3/: Bronze_Completion_Report.md  Business_Goals.md  Dashboard.md  base_watcher.py  linkedin_poster.py  main.py  orchestrator.py  pyproject.toml  run_bot.bat  setup_vault.py
silver_tier_3/.obsidian/: workspace.json
silver_tier_3/Logs/: gmail_seen_ids.json  orchestrator_state.json
silver_tier_3/Needs_Action/: EMAIL_19ce5dea1779.md  EMAIL_19ce5e355a8f.md  EMAIL_19ce5f470453.md  EMAIL_19ce603eaa6b.md  EMAIL_19ce6042b3fa.md  EMAIL_19ced9888cfa.md  EMAIL_19da3c4d16c7.md  EMAIL_19da42b4e6e3.md  EMAIL_19da42ce7309.md  EMAIL_19da42f6ccc6.md  EMAIL_19da42f7f7e3.md  EMAIL_19db32a27051.md  EMAIL_19db894b91f6.md
silver_tier_3/Pending_Approval/: APPROVAL-2026-04-23-EMAIL_19ce5dea1779.md  APPROVAL-2026-04-23-EMAIL_19ce5e355a8f.md  APPROVAL-2026-04-23-EMAIL_19ce5f470453.md  APPROVAL-2026-04-23-EMAIL_19ce603eaa6b.md  APPROVAL-2026-04-23-EMAIL_19ce6042b3fa.md  APPROVAL-2026-04-23-EMAIL_19ced9888cfa.md  APPROVAL-2026-04-23-EMAIL_19da3c4d16c7.md  APPROVAL-2026-04-23-EMAIL_19da42b4e6e3.md  APPROVAL-2026-04-23-EMAIL_19da42ce7309.md  APPROVAL-2026-04-23-EMAIL_19da42f6ccc6.md  APPROVAL-2026-04-23-EMAIL_19da42f7f7e3.md  APPROVAL-2026-04-23-EMAIL_19db32a27051.md  APPROVAL-2026-04-23-EMAIL_19db894b91f6.md
silver_tier_3/Plans/: TEMPLATE_TASK.md  test_invoice_plan.md
silver_tier_3/email-mcp/: auth.js  index.js  package-lock.json  package.json
silver_tier_3/skills/: __init__.py  approval_skill.py  dashboard_skill.py  linkedin_post_skill.py  (+2 more)
(+634 files in other folders)
